--- a/src/newSubscription/FormSubscription.css
+++ b/src/newSubscription/FormSubscription.css
@@ -4,7 +4,7 @@ form {
   margin: auto;
   border-radius: 1em;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   flex-wrap: wrap;
