update candle  color

--- a/src/templates/charts/Chartbar.css
+++ b/src/templates/charts/Chartbar.css
@@ -21,7 +21,7 @@
   text-align: center;
 }
 .chart-bar-fill {
-  background-color: #084a8e;
+  background-color: #e0bf3b;
   width: 100%;
   transition: all 0.3s ease-out;
 }
